--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -1,29 +1,14 @@
 .optionsWrapper {
-  padding: 30px;
-    /* text-align: center; */
-    gap: 10px;
-   
-}
-
-
-.optionsTitle {
-    /* font-family: Arial, Helvetica, sans-serif;
-    font-size: 26px;
-    font-weight: 800; */
-    /* margin-right: auto;
-    margin-left: auto; */
-
-}
-
-.optionsBtnWrapper {
     display: flex;
-     gap: 10px;
-    /* align-items: center; */
-    /* justify-content: center; */
+    padding: 30px;
+    gap: 10px;
+    justify-content: center;
+   
 }
 
 .optionsBtn {
     padding: 8px;
     background-color: rgb(222, 216, 216);
     border-color:  gray;
+    font-size: 20px;
 }
